# models/config.go
@@ -1,0 +1,5 @@
+package models
+
+type Config struct {
+	InviteRequired bool
+}
